2020-11-09 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add option to schedule power on/off

2020-01-17 Magnus Hagdorn
 * piccolo3/client/PiccoloClientCfg.py: no defaults for run options; add
   special string to run argument to select today's date
 * piccolo3/client/PiccoloSpectrometer.py: add method to pretty print list of
   spectrometers and their current state
 * piccolo3/precord.py: use new pprint method to print list of spectrometers;
   add options to set integration times
 * piccolo3/ptimes.py: move print_spectrometers function to
   PiccoloSpectrometers class and use it
 * piccolo3/ptriggered.py: remove option to set integration times; use pretty
   print list of spectrometers

2020-01-16 Magnus Hagdorn
 * piccolo3/ptriggered.py: don't make waiting for trigger interruptible

2019-12-23 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: fix spelling and minor bug fix

2019-12-23 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: only ask server for new current
   time every 10 seconds otherwise use cached value

2019-12-20 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: add methods to set/get state of TEC
   and set/get target detector temperature

2019-12-20 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: check if TEC is present; add
   method to get current temperature

2019-12-10 Magnus Hagdorn
 * setup.py: install new program
 * piccolo3/ptriggered.py: add program to wait for trigger signal and start
   recording when received

2019-12-10 Magnus Hagdorn
 * piccolo3/client/__init__.py: move PiccoloSystem class to separate module
 * piccolo3/client/PiccoloSystem.py: moved from class from __init__.py

2019-12-10 Magnus Hagdorn
 * setup.py: install new program
 * piccolo3/ptimes.py: add program to list/modify integration times

2019-12-10 Magnus Hagdorn
 * piccolo3/precord.py: add logging; use CLI option class to handle command
   line options
 * piccolo3/client/PiccoloClientCfg.py: new module for handling CLI options
